--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 328180089432834051
 textchannel = 649612771050389505
 ladderchannel = 
 jungsanchannel = 
