--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 723047149478346787
 textchannel = 726134097449058404
 ladderchannel = 
 jungsanchannel = 
