--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 723047149478346787
 textchannel = 726134097449058404
-ladderchannel = 
+ladderchannel = 726139515143717005
 jungsanchannel = 
 killchannel = 
 racingchannel = 
