--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 726134097449058404
 ladderchannel = 726139515143717005
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 726139515143717005
 
 before_alert = 1
 before_alert1 = 5
