--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 723047149478346787
-textchannel = 726134097449058404
-ladderchannel = 726139515143717005
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 726139515143717005
+racingchannel = 
 
 before_alert = 1
 before_alert1 = 5
