--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 665107906378727428
 textchannel = 737709058639003720
 ladderchannel = 
 jungsanchannel = 
