--- a/boss.ini
+++ b/boss.ini
@@ -262,3 +262,15 @@ gentime = 15:00
 nogencheck = 1
 before_alert_ment = 서치 고고!!
 alert_ment = 등장!! 학살의 대지로 전설 득템하세요 화이팅!!
+
+bossname = 오르펜
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 서치 고고!!
+alert_ment = 등장!! 오르펜의 둥지로 전설 득템하세요 화이팅!!
+
+bossname = 올크스
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 서치 고고!!
+alert_ment = 등장!! 고요한 분지로 전설 득템하세요 화이팅!!
